# skladbase

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  billing.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  seed.py  subscriptions.py  tasks.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
app/: config.py  db.py  deps.py  i18n.py  main.py  models.py  scheduler.py  seed.py  tasks.py  worker.py
app/api/: analytics.py  billing.py  catalog.py  finance.py  inventory.py  me.py  np.py  np_documents.py  orders.py  payment_webhooks.py  public.py  shop.py  team.py  telegram.py
app/billing/: providers.py  refs.py
app/bot/: dispatcher.py  handlers.py  main.py  notify.py
app/security/: crypto.py  initdata.py  proxy_headers.py  rate_limit.py
app/services/: analytics.py  bootstrap.py  catalog.py  inventory.py  media.py  novaposhta.py  np_shipping.py  orders.py  shop.py  shops.py  subscriptions.py  support_moderation.py  templates.py  webhooks.py
deploy/: .env.production.example  deploy.sh  nginx.conf  skladbase-bot.service  skladbase-scheduler.service  skladbase-web.service
frontend/: widget.js
frontend/app/: .env.example  .gitignore  PRODUCT.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
migrations/: env.py
migrations/versions/: 245bf88efba3_invites_table.py  501d3f657117_nova_poshta_key_and_tracking_status.py  5283eb35d801_shop_website_api_key.py  7aeff9226ecc_stock_movement_reservation_link.py  (+16 more)
scripts/: check-locales.mjs  dev_initdata.py
tests/: conftest.py  test_analytics.py  test_bootstrap_concurrency.py  test_bot_main.py  test_bot_promo.py  test_bot_support.py  test_custom_templates.py  test_finance_analytics.py  test_finance_history.py  test_free_plan.py  test_i18n.py  test_isolation.py  test_migration_backfill_price_at.py  test_migration_product_type.py  test_multi_shop.py  test_novaposhta.py  test_np_documents_api.py  test_np_key_api.py  test_np_tracking.py  test_permissions_foundation.py  test_permissions_gates.py  test_product_photos.py  test_release_reasons.py  test_shipping.py  test_shop_lifecycle.py  test_shop_profile.py  test_stage0.py  test_stage1.py  test_stage2a.py  test_stage2b.py  test_stage3.py  test_stage4a.py  test_stage4b.py  test_stage5a.py  test_stage5b.py  test_stage6.py  test_stage6b.py  test_stage7c.py  test_stage8_hardening.py  test_stage9a_prod_readiness.py  (+3 more)
(+77 files in other folders)
