[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skladbase"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "aiogram>=3.10",
    "httpx>=0.27",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

# --------------------------------------------------------------------------- #
#  Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF012", # mutable class attributes (SQLAlchemy columns)
    "RUF001", # ambiguous Cyrillic in strings — intentional (Ukrainian project)
    "RUF002", # ambiguous Cyrillic in docstrings — intentional (Ukrainian project)
    "RUF003", # ambiguous Cyrillic in comments — intentional (Ukrainian project)
    "UP037",  # quoted annotations redundant with __future__ annotations — style preference
    "UP042",  # (str, enum.Enum) -> StrEnum — preserving original SQLAlchemy-compatible pattern
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

# --------------------------------------------------------------------------- #
#  Mypy                                                                        #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

# --------------------------------------------------------------------------- #
#  Pytest                                                                      #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
